--- a/app/views/docs/functions-execute.phtml
+++ b/app/views/docs/functions-execute.phtml
@@ -325,4 +325,11 @@ functions.createExecution(
 </p>
 
 <h2>Logs and results</h2>
-[TODO: @matej, decide what needs to go here.]
+<p>
+    You can view the logs your function executions in the Appwrite Console. 
+    Navigate to <b>Functions</b> and click on a function to view it's executions.
+</p>
+<p>
+    For security reasons, Appwrite does not store the response of function executions.
+    If you need to debug, we recommend logging the response in your function code.
+</p>
