--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -360,7 +360,6 @@ public class Main {
     There are several possible ways to send a response, explore them in the following Appwrite Function.
 </p>
 
-[TODO: @luke Let's make sure we show an example for evert runtime with good string manip methods.]
 <ul class="phases clear" data-ui-phases>
     <li>
         <h3>Node.js</h3>
@@ -590,9 +589,22 @@ Future&lt;dynamic> main(final context) async {
         <h3>Swift</h3>
         <div>
         <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift">
-            <pre class="line-numbers"><code class="prism language-swift" data-prism>
+            <pre class="line-numbers"><code class="prism language-swift" data-prism>import Foundation
 
-            </code></pre>
+func main(context: RuntimeContext) async throws -> RuntimeOutput {
+    switch context.req.query["type"] {
+        case "text":
+            return try await context.send("This is a text response", 200)
+        case "json":
+            return try await context.send(["type": "This is a JSON response"], 200)
+        case "redirect":
+            return try await context.redirect("https://appwrite.io", 301)
+        case "html":
+            return try await context.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, ["content-type": "text/html"])
+        default:
+            return try await context.empty()
+    }
+}</code></pre>
         </div>
         </div>
     </li>
@@ -600,9 +612,26 @@ Future&lt;dynamic> main(final context) async {
         <h3>.NET</h3>
         <div>
         <div class="ide margin-top-small" data-lang="csharp" data-lang-label="C#">
-            <pre class="line-numbers"><code class="prism language-csharp" data-prism>
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>namespace DotNetRuntime;
 
-            </code></pre>
+public class Handler {
+    public async Task&lt;RuntimeOutput> Main(RuntimeContext Context) 
+    {
+        switch (Context.Request.Query["type"])
+        {
+            case "text":
+                return await Context.Send("This is a text response", 200);
+            case "json":
+                return await Context.Send(new Dictionary&lt;string, object&gt;() { { "type", "This is a JSON response" } }, 200);
+            case "redirect":
+                return await Context.Redirect("https://appwrite.io", 301);
+            case "html":
+                return await Context.Send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, new Dictionary&lt;string, string&gt;() { { "content-type", "text/html" } });
+            default:    
+                return await Context.Empty();
+        }
+    }
+}</code></pre>
         </div>
         </div>
     </li>
@@ -610,20 +639,54 @@ Future&lt;dynamic> main(final context) async {
         <h3>Kotlin</h3>
         <div>
         <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin">
-            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>package io.openruntimes.kotlin.src
 
-            </code></pre>
+import io.openruntimes.kotlin.RuntimeContext
+import io.openruntimes.kotlin.RuntimeOutput
+
+class Main {
+    fun main(context: RuntimeContext): RuntimeOutput {
+        when (context.req.query["type"]) {
+            "text" -> return context.send("This is a text response", 200)
+            "json" -> return context.send(mapOf("type" to "This is a JSON response"), 200)
+            "redirect" -> return context.redirect("https://appwrite.io", 301)
+            "html" -> return context.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, mapOf("content-type" to "text/html"))
+            else -> return context.empty()
+        }
+    }
+}</code></pre>
         </div>
-
         </div>
     </li>
     <li>
         <h3>Java</h3>
         <div>
         <div class="ide margin-top-small" data-lang="java" data-lang-label="Java">
-            <pre class="line-numbers"><code class="prism language-java" data-prism>
+            <pre class="line-numbers"><code class="prism language-java" data-prism>package io.openruntimes.java.src;
 
-            </code></pre>
+import io.openruntimes.java.RuntimeContext;
+import io.openruntimes.java.RuntimeOutput;
+import java.util.Map;
+import java.util.HashMap;
+
+public class Main {
+    public RuntimeOutput main(RuntimeContext context) throws Exception {
+        switch (context.getReq().getQuery()["type"]) {
+            case "text":
+                return context.send("This is a text response", 200);
+            case "json":
+                HashMap&lt;String, Object&gt; data = new HashMap&lt;&gt;();
+                data.put("type", "This is a JSON response");
+                return context.send(data, 200);
+            case "redirect":
+                return context.redirect("https://appwrite.io", 301);
+            case "html":
+                return context.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, Map.of("content-type", "text/html"));
+            default:
+                return context.empty();
+        }
+    }
+}</code></pre>
         </div>
         </div>
     </li>
@@ -631,9 +694,35 @@ Future&lt;dynamic> main(final context) async {
         <h3>C++</h3>
         <div>
         <div class="ide margin-top-small" data-lang="cpp" data-lang-label="C++">
-            <pre class="line-numbers"><code class="prism language-csharp" data-prism>
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>#include "../RuntimeResponse.h"
+#include "../RuntimeRequest.h"
+#include "../RuntimeOutput.h"
+#include "../RuntimeContext.h"
 
-            </code></pre>
+namespace runtime {
+  class Handler {
+    public:
+      static RuntimeOutput main(RuntimeContext &context) {
+        std::string type = context.req.query["type"];
+
+        if (type == "text") {
+          return context.send("This is a text response", 200);
+        } else if (type == "json") {
+          Json::Value data;
+          data["type"] = "This is a JSON response";
+          return context.send(data, 200);
+        } else if (type == "redirect") {
+          return context.redirect("https://appwrite.io", 301);
+        } else if (type == "html") {
+          Json::Value headers;
+          headers["content-type"] = "text/html";
+          return context.send("&lt;h1&gt;This is an HTML response&lt;/h1&gt;", 200, headers);
+        } else {
+          return context.empty();
+        }
+      }
+  };
+}</code></pre>
         </div>
         </div>
     </li>
@@ -655,7 +744,7 @@ Future&lt;dynamic> main(final context) async {
         <div class="ide margin-top-small" data-lang="javascript" data-lang-label="JavaScript">
             <pre class="line-numbers"><code class="prism language-js" data-prism>export default async ({ res, log, error }) => {
     log("This is a log, use for logging information to console");
-    error("This is an error, use for logging errors to console")
+    error("This is an error, use for logging errors to console");
 
     return res.send("Check the Appwrite Console to see logs and errors!");
 };</code></pre>
