Update how we label experimental features

--- a/app/views/docs/databases-relationships.phtml
+++ b/app/views/docs/databases-relationships.phtml
@@ -1,8 +1,8 @@
 <p>Relationships describe how documents in different collections are associated, so that related documents can be read, updated, or deleted together. Entities in real-life often associate with each other in an organic and logical way, like a person and their dog, an album and its songs, or friends in a social network. These types of association between entities can be modeled in Appwrite using relationships.</p>
 
 <div class="notice">
-    <h2>Beta Feature</h2>
-    <p>Appwrite Relationships is a beta feature. The API and behavior are subject to change in future versions.</p>
+    <h2>Experimental Feature</h2>
+    <p>Appwrite Relationships is an experimental feature. The API and behavior are subject to change in future versions.</p>
 </div>
 
 <h2><a href="#when-to-use-relationships" id="when-to-use-relationships">When to Use a Relationship</a></h2>
@@ -558,7 +558,7 @@ databases.createDocument(
 
 <h2><a href="#query" id="query">Querying</a></h2>
 
-<p>Querying is currently not available in the beta version of Appwrite Relationships but will be added in a later version.</p>
+<p>Querying is currently not available in the experimental version of Appwrite Relationships but will be added in a later version.</p>
 
 <h2><a href="#update" id="update">Updating Relationships</a></h2>
 
