--- a/app/views/docs/sdks.phtml
+++ b/app/views/docs/sdks.phtml
@@ -14,14 +14,14 @@ $markdown->setSafeMode(true);
     <?php foreach ($platforms as $platform): ?>
         <?php if(!$platform['enabled']) { continue; } ?>
         <li class="margin-bottom-small">
-            <a href="/docs/sdks#<?php echo strtolower($platform['name']); ?>"><i class="icon-angle-circled-right"></i><?php echo $this->escape($platform['name']); ?> SDKs<?php if($platform['beta']): ?> (beta)<?php endif; ?></a>
+            <a href="/docs/sdks#<?php echo strtolower($platform['name']); ?>"><i class="icon-angle-circled-right"></i><?php echo $this->escape($platform['name']); ?> SDKs<?php if($platform['beta']): ?> (experimental)<?php endif; ?></a>
         </li>
     <?php endforeach; ?>
 </ul>
 
 <?php foreach($platforms as $platform): ?>
     <?php if(!$platform['enabled']) { continue; } ?>
-    <h2 href="/docs/sdks#<?php echo strtolower($platform['name']); ?>" id="<?php echo strtolower($platform['name']); ?>"><?php echo $platform['name']; ?> SDKs<?php if($platform['beta']): ?> (beta)<?php endif; ?></h2>
+    <h2 href="/docs/sdks#<?php echo strtolower($platform['name']); ?>" id="<?php echo strtolower($platform['name']); ?>"><?php echo $platform['name']; ?> SDKs<?php if($platform['beta']): ?> (experimental)<?php endif; ?></h2>
 
     <p><?php echo $markdown->text($platform['description']); ?></p>
 
@@ -63,7 +63,7 @@ $markdown->setSafeMode(true);
                 <?php if($language['enabled']): ?>
                     <span class="tag">official</span>
                     <?php if($language['beta']): ?>
-                        <span class="tag red margin-start-small">beta</span>
+                        <span class="tag red margin-start-small">experimental</span>
                     <?php endif; ?>
                 <?php endif; ?>
             </td>
@@ -79,7 +79,7 @@ $markdown->setSafeMode(true);
 
 <h2><a href="/docs/sdks#noSDK" id="noSDK">Integrate without an SDK</a></h2>
 
-<p>We are always looking to add new SDKs to our platform, but if the SDK you are looking for is still missing or in a beta channel, you can always integrate with Appwrite directly using any standard HTTP client and the Appwrite REST API. You can learn more about <a href="https://dev.to/eldadfux/learn-how-you-can-take-advantage-of-the-appwrite-api-without-using-any-sdk-a41" rel="noopener" target="_blank">how you can integrate directly with Appwrite HTTP API</a> from our dedicated blog post on the topic.</p>
+<p>We are always looking to add new SDKs to our platform, but if the SDK you are looking for is still missing or is labeled experimental, you can always integrate with Appwrite directly using any standard HTTP client and the Appwrite REST API. You can learn more about <a href="https://dev.to/eldadfux/learn-how-you-can-take-advantage-of-the-appwrite-api-without-using-any-sdk-a41" rel="noopener" target="_blank">how you can integrate directly with Appwrite HTTP API</a> from our dedicated blog post on the topic.</p>
 
 <h2><a href="/docs/sdks#community" id="community">Community</a></h2>
 
