--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -16,7 +16,7 @@
 </p>
 
 <ol class="margin-top margin-bottom-large text-size-normal">
-	<li>Invokation, where Appwrite receives a event to execute a Function. This event could be a request from an SDK, a request to the function's domain, a scheduled execution, or an execution triggered by an event within your Appwrite project.</li>
+	<li>Invocation, where Appwrite receives a event to execute a Function. This event could be a request from an SDK, a request to the function's domain, a scheduled execution, or an execution triggered by an event within your Appwrite project.</li>
 	<li>After a function is invoked, Appwrite passes request information to your function's executor.</li>
 	<li>The executor runs the function code you deployed and waits for it to return.</li>
 	<li>Function terminates either when the user returns with a method from <code>context.res</code>, when the user code throws an exception, or times out.</li>
