--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -89,7 +89,7 @@
 <h3><a href="#request" id="request">Request</a></h3>
 <p>
     If you pass data into an Appwrite function, it'll be found in the request object. 
-    This includes all invokation methods, such as data from Appwrite SDKs, HTTP calls, Appwrite events, and browsers visiting the configured domain.
+    This includes all invocation methods, such as data from Appwrite SDKs, HTTP calls, Appwrite events, and browsers visiting the configured domain.
     Explore the request object with the following function, which logs all request params to the Appwrite Console.
 </p>
 
