--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -988,7 +988,7 @@ namespace runtime {
 <h2><a href="#dependencies" id="dependencies">Dependencies</a></h2>
 
 <p> 
-    Your function's dependencies should be managed by the package manager of each language. By default, we include the following package manages in each runtime:
+    Your function's dependencies should be managed by the package manager of each language. By default, we include the following package managers in each runtime:
 </p>
 
 <p>
