--- a/app/views/docs/functions-execute.phtml
+++ b/app/views/docs/functions-execute.phtml
@@ -10,9 +10,13 @@
     When requests are made to this link, whether through a browser or through an HTTP requests, 
     the request information like request headers and request body will be passed to the function.
     This unlocks interesting ways to integrate other apps and backends to your Appwrite project.
+
+    [TODO: @luke can we do a curl example here?]
 </p>
 
 
+[TODO: @matej @luke when the SDKs are generated, what other optional params exist for this function? Can we show them in example, too?]
+[for example body (data)]
 <h2><a href="#sdk" id="sdk">SDK</a></h2>
 <p>
    You can invoke your Appwrite Functions directly from the Appwrite SDKs.
@@ -20,6 +24,9 @@
 
 <a href="/docs/sdk/functions"><i class="icon-angle-circled-right"></i>Learn more about using the Appwrite SDKs</a>
 
+<h3>Client SDKs</h3>
+[TODO: @matej @luke client SDK examples here are needed, too.]
+<h3>Server SDKs</h3>
 <ul class="phases clear" data-ui-phases>
     <li>
         <h3>Node.js</h3>
