--- a/app/views/docs/functions-recipes.phtml
+++ b/app/views/docs/functions-recipes.phtml
@@ -11,6 +11,7 @@
 
 <p>
   In this recipe, we'll build a simple function for currency conversion.
+  Let's start with a static converstion rate. We'll show you how to integrate an API later in this example.
 </p>
 
 <ul class="phases clear" data-ui-phases>
